# mech-interp-claim-calibration

./: .gitignore  CODEBOOK.md  LICENSE  README.md  analyze_pilot.py  annotate.py  annotation_config.yaml  annotation_template.csv  annotations.csv  calibration_annotations.csv  calibration_rationales.md  candidate_papers.csv  compute_iaa.py  fact_checking_log.md  fetch_papers.py  pyproject.toml  validate.py
annotations_multi/claude/: annotations_classify.csv
annotations_multi/gpt5/: annotations_classify.csv  run_metadata.json
output/: contingency_table.tex  iaa_bias.tex  iaa_by_paper_type.tex  iaa_pairwise_claim_rung.tex  iaa_pairwise_gap_score.tex  iaa_pairwise_method_rung.tex  iaa_results.json  iaa_summary.tex  iaa_supplementary.tex  location_stats.tex  method_stats.tex  overclaim_distribution.tex  paper_list.tex  paper_stats.csv  paper_type_stats.tex
paper_texts/: 2104.08164.txt  2202.05262.txt  2211.00593.txt  2301.04709.txt  2301.05217.txt  2304.14997.txt  2309.16042.txt  2311.17030.txt  2402.17700.txt  2403.07809.txt  2404.03592.txt  2404.03646.txt  2404.15255.txt  2406.11779.txt  2407.14008.txt  2409.04478.txt  2410.08417.txt  2411.08745.txt  2411.16105.txt  2501.17148.txt  2502.03714.txt  2503.10894.txt  2504.02976.txt  2505.14685.txt  2505.22637.txt  2505.24859.txt  2506.03292.txt  2506.18167.txt  2507.08802.txt  2507.20936.txt  2508.11214.txt  2508.21258.txt  2509.06608.txt  2509.18127.txt  2510.01070.txt  2510.06182.txt  2511.05923.txt  2511.09432.txt  2511.22662.txt  2512.05534.txt  (+11 more)
tests/: conftest.py  test_pipeline.py
(+1107 files in other folders)
